metadata/force-app/main/default/objects/ccrz__E_LocaleFormatter__c/fields/ccrz__DateTimeField__c.field-meta.xml
<CustomField>
    <fullName>ccrz__DateTimeField__c</fullName>
    <label>DateTime Field</label>
    <type>DateTime</type>
</CustomField>