metadata/force-app/main/default/objects/ccrz__E_LocaleFormatter__c/fields/ccrz__Percent__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Percent__c</fullName>
    <description>Field to display data in percentage format</description>
    <label>Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>