metadata/force-app/main/default/objects/ccrz__E_LocaleFormatter__c/fields/ccrz__RichText__c.field-meta.xml
<CustomField>
    <fullName>ccrz__RichText__c</fullName>
    <label>RichText</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>